// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal > Render 1`] = `<div />`;

exports[`Modal > Render with fullWidth 1`] = `<div />`;

exports[`ModalAcceptButton > Render 1`] = `
<div>
  <button
    class="styled__ButtonWrapper-sc-1fzdj0n-0 coECpw"
  >
    Accept
  </button>
</div>
`;

exports[`ModalCancelButton > Render 1`] = `
<div>
  <button
    class="styled__ButtonWrapper-sc-1fzdj0n-0 emfCFH"
  >
    Cancel
  </button>
</div>
`;

exports[`ModalCloseButton > Render 1`] = `
<div>
  <button
    class="styled__ButtonWrapper-sc-1fzdj0n-0 fCcpkY styled__ModalCloseButton-sc-9ggyja-5 eDWGAM"
  >
    <span
      class="styled__ButtonIconsWrapper-sc-1fzdj0n-1 hTTCzA"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ModalFooter > Render 1`] = `
<div>
  <div
    class="styled__ModalFooter-sc-9ggyja-6 cecdHp"
  />
</div>
`;

exports[`ModalHeader > Render 1`] = `
<div>
  <div
    class="styled__ModalHeader-sc-9ggyja-3 iFCrAO"
  />
</div>
`;
